# calc-math-lab2

./: .clang-format  .clang-tidy  .gitignore  Backend.hpp  CHANGELOG.md  CMakeLists.txt  INSTALL.md  IntegrationModule.cpp  IntegrationModule.hpp  LICENSE  Main.qml  README.md  RootModule.cpp  RootModule.hpp  SystemModule.hpp  Theme.qml  main.cpp  package.sh
.forgejo/workflows/: release.yml
.github/workflows/: release.yml
.zed/: tasks.json
assets/datasets/: sample1_var5.txt  sample2_sin.txt  sample3_runge.txt
backend/: ApproximationModule.cpp  ApproximationModule.hpp  Backend.hpp  BackendUtil.hpp  GaussModule.cpp  GaussModule.hpp  IntegrationModule.cpp  IntegrationModule.hpp  InterpolationModule.cpp  InterpolationModule.hpp  OdeModule.cpp  OdeModule.hpp  RootModule.hpp  SystemModule.cpp  SystemModule.hpp
calc/: Approximation.hpp  Gauss.hpp  Integrators.hpp  Interpolation.hpp  Ode.hpp  Solvers.hpp  approximation.cpp  gauss.cpp  integrators.cpp  interpolation.cpp  ode.cpp  solver.cpp
components/: Body.qml  EquationCard.qml  Header.qml  ModuleApproximation.qml  ModuleGauss.qml  ModuleIntegration.qml  ModuleInterpolation.qml  ModuleOde.qml  ModuleRoot.qml  ModuleSettings.qml  ModuleSystem.qml  MyButton.qml  MyRect.qml  MyText.qml  MyTextField.qml  NavButton.qml
doc/: lab3.typ  main.typ
doc/resources/flowcharts/: dihotomy.dot  improper_integral.dot  is_antisymmetric.dot  iter.dot  left_rect.dot  limit_at_endpoint.dot  mid_rect.dot  prepare_intervals.dot  right_rect.dot  runge_loop.dot  simpson.dot  system_iter.dot  trapezoid.dot  try_principal_value.dot
reports/: lab1.typ  lab2.typ  lab3.typ  lab4.typ  lab5.typ  lab6.typ
reports/resources/flowcharts/: compute_pearson.dot  compute_r2.dot  compute_segment.dot  gauss.dot  improper_integral.dot  lab5_bessel.dot  lab5_diff_table.dot  lab5_factorial.dot  lab5_gauss1.dot  lab5_gauss2.dot  lab5_interpolate.dot  lab5_is_equidistant.dot  lab5_lagrange.dot  lab5_nearest_index.dot  lab5_newton_bwd.dot  lab5_newton_fwd.dot  lab5_stirling.dot  lab6_endpoint.dot  lab6_improved_euler.dot  lab6_milne.dot  lab6_order.dot  lab6_rk4.dot  lab6_runge.dot  lab6_runge_error.dot  lab6_solve.dot  lab6_summary.dot  limit_at_endpoint.dot  linear_cramer.dot  ls_best.dot  ls_exp.dot  ls_linear.dot  ls_log.dot  ls_poly.dot  ls_power.dot  ls_stats.dot  mid_rect.dot  newton.dot  phi_at.dot  prepare_intervals.dot  right_rect.dot  (+6 more)
